--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,12 +35,12 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Build package
-      run: dotnet build src\FunctionalInterfaces\FunctionalInterfaces.csproj -c Release
+      run: dotnet build src/FunctionalInterfaces/FunctionalInterfaces.csproj -c Release
     - name: Upload package artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Packages
-        path: src\FunctionalInterfaces\bin\Release\*.nupkg
+        path: src/FunctionalInterfaces/bin/Release/*.nupkg
         if-no-files-found: error
 
   publish-github:
